<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiteTV</string>
    <string name="channel_list">Channel List</string>
    <string name="settings">Settings</string>
    <string name="web_server">Web Server</string>
    <string name="play_source">Play Source</string>
    <string name="epg_source">EPG Source</string>
    <string name="key_mapping">Key Mapping</string>
    <string name="m3u_url">M3U URL</string>
    <string name="epg_url">EPG URL</string>
    <string name="web_server_enabled">Web Server Enabled</string>
    <string name="server_address">Server Address</string>
    <string name="upload_m3u">Upload M3U File</string>
    <string name="channel_up">Channel Up</string>
    <string name="channel_down">Channel Down</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="ok">OK</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="rebind">Rebind</string>
    <string name="waiting_key">Waiting for key...</string>
    <string name="no_playlist_configured">No playlist configured. Press MENU to open settings, or configure it from a browser at port %1$d of this device.</string>
    <string name="playback_buffering">Buffering…</string>
    <string name="playback_reconnecting">Playback failed, reconnecting… (%1$d/%2$d)</string>
    <string name="playback_failed">Cannot play %1$s. Press OK to choose another channel.</string>
    <string name="playlist_load_failed">Cannot load the playlist: %1$s</string>
    <string name="playlist_load_failed_cached">Cannot refresh the playlist (%1$s). Showing the last saved copy.</string>
    <string name="playback_trying_backup">%1$s is not responding, trying source %2$d of %3$d…</string>
    <string name="todays_programs">Today\'s Programs</string>
    <string name="no_epg_data">No EPG data</string>
    <string name="next_program">Next: %1$s</string>
    <string name="channel_number_unknown">No such channel</string>
    <string name="groups">Groups</string>
    <string name="group_favorites">Favorites</string>
    <string name="group_all">All Channels</string>
    <string name="favorites_empty">No favorites yet.\n\nHold OK on a channel to add it.</string>
    <string name="group_empty">This group is empty.</string>
    <string name="favorite_added">★ %1$s added to favorites</string>
    <string name="favorite_removed">%1$s removed from favorites</string>
    <string name="m3u_url_saved">M3U URL saved</string>
    <string name="epg_url_saved">EPG URL saved</string>
    <string name="web_server_started">Web server started</string>
    <string name="web_server_stopped">Web server stopped</string>
    <string name="epg_display_enabled">EPG display enabled</string>
    <string name="epg_display_disabled">EPG display disabled</string>
    <string name="server_address_format">Address: %1$s</string>
    <string name="sidebar_opacity">Channel List Background</string>
    <string name="sidebar_opacity_translucent">Translucent (default)</string>
    <string name="sidebar_opacity_semi">Semi-opaque</string>
    <string name="sidebar_opacity_opaque">Opaque</string>
    <string name="sidebar_opacity_saved">Channel list background updated</string>
</resources>
